# transpose

./: .bake.toml  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  dir_49e56c817e5e54854c35e136979f97ca.html  index.html  lockfile.json  md_docs_CODING_RULES.html  md_docs_coordination_worklist_2026_07_13.html  md_docs_provenance.html  md_docs_typeclass_object_pattern.html  navtreedata.js  navtreeindex0.js  pages.html  pyproject.toml  transpose.org
.emacs.d/: init.el
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci_tests.yml  codeql.yml  dependency-review.yml  doxygen-gh-pages.yml  ossf-scorecard-analysis.yml  pre-commit-check.yml  pre-commit-update.yml  test_makefile.yaml
cmake/: gcovr.cfg.in
docs/: CODING_RULES.md  Doxyfile  box-traits-and-typeclass-objects.org  bringing-typeclass-operations-into-scope.org  codestyle.org  coordination-worklist-2026-07-13.md  doxygen-awesome-darkmode-toggle.js  mrdocs.yml  provenance.md  typeclass-object-a-new-extension-point.org  typeclass-object-pattern-in-cpp.org  typeclass-object-pattern.md
etc/: clang-23-toolchain.cmake  clang-flags.cmake  gcc-flags.cmake  gcc-toolchain.cmake  toolchain.cmake
examples/: CMakeLists.txt  algorithm_object_example.cpp  apply_example.cpp  binary_tree.hpp  binary_tree_example.cpp  exec_example.cpp  fold_example.cpp  lookup_modes_example.cpp  simd_example.cpp  soa_aos_example.cpp  transpose_example.cpp  traverse_example.cpp
include/beman/transpose/: CMakeLists.txt  apply.hpp  array.hpp  config.hpp  config_generated.hpp.in  dual_monoid.hpp  exec.hpp  fold.hpp  functor.hpp  monad.hpp  monoid.hpp  sender.hpp  sequence.hpp  simd.hpp  simd_lanes.hpp  transpose.hpp  traverse.hpp  zip_list.hpp
include/beman/transpose/detail/: typeclass_base.hpp
infra/cmake/: Config.cmake.in
installtest/: CMakeLists.txt  README.md  test.cpp
papers/blog/: Makefile  adapting-a-type-to-a-typeclass.md  adapting-a-type-to-a-typeclass.org  blog-export.el  how-traverse-and-transpose-work.md  how-traverse-and-transpose-work.org  index.md  index.org  prior-art-typeclasses-in-cpp.md  prior-art-typeclasses-in-cpp.org  references.bib  transposing-structure-and-context.md  transposing-structure-and-context.org  writing-algorithms-with-typeclass-objects.md  writing-algorithms-with-typeclass-objects.org
papers/wg21/: D3200R0.md  Makefile  N3887.latex
papers/wg21/data/templates/: wg21.latex.patch
scripts/: flatten_for_ce.py
search/: all_0.js  all_1.js  all_2.js  files_0.js  files_1.js  files_2.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
src/examples/: CMakeLists.txt  hello.cpp
src/smd/: CMakeLists.txt
src/smd/transpose/: CMakeLists.txt  transpose.cpp  transpose.hpp  transpose.test.cpp
tests/beman/transpose/: CMakeLists.txt  apply.test.cpp  dual_monoid.test.cpp  exec.test.cpp  fold.test.cpp  functor.test.cpp  monad.test.cpp  monoid.test.cpp  sender.test.cpp  sequence.test.cpp  simd.test.cpp  simd_lanes.test.cpp  test_support.hpp  transpose.test.cpp  traverse.test.cpp  zip_list.test.cpp
tests/beman/transpose/detail/: typeclass_base.test.cpp
