[project]
name = "concept-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "copier>=9.15.1",
]

[dependency-groups]
dev = [
  "clang-format==22.1.5",
  "cmake==4.3.2",
  "gcovr>=8.6",
  "mbake==1.4.6",
  "ninja>=1.13",
  "pre-commit>=4.6.0",
  "shellcheck-py>=0.11.0.1"
]
papers = [
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "panflute~=2.1.3",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]
